# abi-connected-example

./: .gitignore  Cargo.toml  package.json  tsconfig.json
frontend/: App.js  App.tsx  config.tsx  index.html  index.js  index.tsx
frontend/components/: Form.tsx
res/: .gitignore  abi.json  metadata.json
src/: lib.rs
